# simbir-go

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt  sqlite.db
src/: setup.py
src/simbir_go_backend/: config.py  create_admin_util.py
src/simbir_go_backend/adapters/: jwt.py  repository.py  security.py
src/simbir_go_backend/adapters/sqlalchemy/: custom_types.py  orm.py
src/simbir_go_backend/domain/: model.py
src/simbir_go_backend/endpoint/controllers/: admin_controller.py
src/simbir_go_backend/entrypoint/: exceptions.py  fastapi_app.py  schemas.py
src/simbir_go_backend/entrypoint/controllers/: account_controller.py  admin_controller.py  payment_controller.py  rent_controller.py  transport_controller.py
src/simbir_go_backend/entrypoint/dependencies/: auth.py  uow.py
src/simbir_go_backend/service/: account_services.py  dtos.py  exceptions.py  rent_service.py  rent_services.py  transport_services.py  unit_of_work.py
