[project]
name = "simbir_go"
version = "0.1507"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

## Makes pytest work as intended
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--tb=short"]
## Ignore deprecation warnings because we are using SQLAlchemy v1.4
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = "src"
